aptosid-art-legacy (2011.03.5) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 15 Jan 2012 23:51:47 +0100

aptosid-art-legacy (2011.03.4) unstable; urgency=low

  * switch to compat level 9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 15 Jan 2012 23:51:09 +0100

aptosid-art-legacy (2011.03.3) unstable; urgency=low

  * fix Ἡμέρα ksplash build.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jan 2012 00:59:56 +0100

aptosid-art-legacy (2011.03.2) unstable; urgency=low

  * fix file names.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jan 2012 00:16:55 +0100

aptosid-art-legacy (2011.03.1) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * use xz to compress source and binaries.
  * fix translation for άκυρος.
  * introduce initial step of build concurrency.

  [ Rick Battle ]
  * fred bump + added void text 

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jan 2012 23:49:05 +0100

aptosid-art-legacy (2011.03.0) unstable; urgency=low

  * import Πόνος.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 05 Jan 2012 00:32:17 +0100

aptosid-art-legacy (2011.02.3) unstable; urgency=low

  * fix dep5 syntax, add another gpl2+ stanza.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 16 Sep 2011 00:32:02 +0200

aptosid-art-legacy (2011.02.2) unstable; urgency=low

  * use Format instead of Format-Specification in debian/copyright and fix URL
    to use alioth's new anonscm location.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 15 Sep 2011 23:36:36 +0200

aptosid-art-legacy (2011.02.1) unstable; urgency=low

  * add accidentally omitted copyright stanza for Ἡμέρα.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 15 Jul 2011 22:23:38 +0200

aptosid-art-legacy (2011.02.0) unstable; urgency=low

  * drop -edu wallpapers and infrastructure.
  * import Ἡμέρα release artwork.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 15 Jul 2011 20:24:34 +0200
