@@ -1,8 +1,12 @@
 aptosid-art-legacy (2011.03.5) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 15 Jan 2012 23:51:47 +0100
+  [ Niall Walsh ]
+  * rework keres make_the_letters to be more parallel and unblock build-time
+
+ -- Niall Walsh <niallwalsh@users.berlios.de>  Sun, 05 Feb 2012 18:28:22 +0000
 
 aptosid-art-legacy (2011.03.4) unstable; urgency=low
 
